--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1542f8a2",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fdc0c2e0",
    "metadata": {
     "collapsed": true,
@@ -24,49 +24,19 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pip.repos.neuron.amazonaws.com\n",
-      "Collecting python_docx\n",
-      "  Downloading python-docx-0.8.11.tar.gz (5.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting lxml>=2.3.2\n",
-      "  Downloading lxml-4.9.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (7.1 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.1/7.1 MB\u001b[0m \u001b[31m12.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hBuilding wheels for collected packages: python_docx\n",
-      "  Building wheel for python_docx (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for python_docx: filename=python_docx-0.8.11-py3-none-any.whl size=184490 sha256=07d5d6f36867ab26f5556964c5be844786193250a5fbcb296b8f8ede37640ff0\n",
-      "  Stored in directory: /home/ec2-user/.cache/pip/wheels/65/e1/9b/0c38fe6cfe02a9fe31cb6b4efd90985f17354d7f77872f2def\n",
-      "Successfully built python_docx\n",
-      "Installing collected packages: lxml, python_docx\n",
-      "Successfully installed lxml-4.9.2 python_docx-0.8.11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install python_docx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "947b11e9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Sagemaker Endpoint Deploy\n",
     "from sagemaker.huggingface import HuggingFaceModel\n",
@@ -99,20 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "633841bc-df6d-4b02-a45c-161fe65f377b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.187071323394775\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inference testing\n",
     "import time\n",
@@ -127,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "92c23b2a",
    "metadata": {
     "tags": []
@@ -186,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b16f410c",
    "metadata": {
     "tags": []
@@ -212,8 +174,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e9c2c224",
+   "metadata": {},
+   "source": [
+    "### Input your customerized index_name"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "32458c74",
    "metadata": {
     "tags": []
@@ -224,13 +195,13 @@
     "import boto3\n",
     "import requests\n",
     "import json\n",
-    "\n",
+    "import os\n",
     "sm_client = boto3.client('secretsmanager')\n",
     "host_url = sm_client.get_secret_value(SecretId='opensearch-host-url')['SecretString']\n",
     "urldata= json.loads(host_url)\n",
     "host = urldata.get('host') # cluster endpoint, for example: my-test-domain.us-east-1.es.amazonaws.com/\n",
     "region = os.getenv('AWS_REGION', '') # e.g. cn-north-1\n",
-    "index_name = \"docs\"\n",
+    "index_name = \"docs\"     # pls customized your index name, default is 'docs'\n",
     "master_user = sm_client.get_secret_value(SecretId='opensearch-master-user')['SecretString']\n",
     "data= json.loads(master_user)\n",
     "username = data.get('username')\n",
@@ -266,8 +237,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "569c2f76",
+   "metadata": {},
+   "source": [
+    "### Input your customized folder_path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "10f412d3",
    "metadata": {
     "collapsed": true,
@@ -276,23 +256,11 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m folder_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mslice\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m----> 9\u001b[0m names \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfolder_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m before_import \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(names)):\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: ''"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Preprocess Data and Import\n",
     "\n",
-    "hfp = sagemaker.huggingface.model.HuggingFacePredictor('huggingface-inference-text2vec-base-chinese-v1-gpu')\n",
+    "hfp = sagemaker.huggingface.model.HuggingFacePredictor('huggingface-inference-text2vec-base-chinese-v1')\n",
     "\n",
     "folder_path = ''\n",
     "\n",
@@ -314,18 +282,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "adaa310e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table created successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create Dynamo DB\n",
     "client = boto3.client('dynamodb', region_name='us-west-2')\n",
