--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -200,7 +200,7 @@
     "host_url = sm_client.get_secret_value(SecretId='opensearch-host-url')['SecretString']\n",
     "urldata= json.loads(host_url)\n",
     "host = urldata.get('host') # cluster endpoint, for example: my-test-domain.us-east-1.es.amazonaws.com/\n",
-    "region = os.getenv('AWS_REGION', '') # e.g. cn-north-1\n",
+    "region = boto3.session.Session().region_name # e.g. cn-north-1\n",
     "index_name = \"docs\"     # pls customized your index name, default is 'docs'\n",
     "master_user = sm_client.get_secret_value(SecretId='opensearch-master-user')['SecretString']\n",
     "data= json.loads(master_user)\n",
@@ -288,7 +288,9 @@
    "outputs": [],
    "source": [
     "#Create Dynamo DB\n",
-    "client = boto3.client('dynamodb', region_name='us-west-2')\n",
+    "region =boto3.session.Session().region_name\n",
+    "\n",
+    "client = boto3.client('dynamodb', region_name=region)\n",
     "\n",
     "try:\n",
     "    resp = client.create_table(\n",
