--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -32,14 +32,14 @@
       "Looking in indexes: https://pypi.org/simple, https://pip.repos.neuron.amazonaws.com\n",
       "Collecting python_docx\n",
       "  Downloading python-docx-0.8.11.tar.gz (5.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m51.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m0:01\u001b[0m\n",
       "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hCollecting lxml>=2.3.2\n",
       "  Downloading lxml-4.9.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (7.1 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.1/7.1 MB\u001b[0m \u001b[31m12.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.1/7.1 MB\u001b[0m \u001b[31m43.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hBuilding wheels for collected packages: python_docx\n",
       "  Building wheel for python_docx (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for python_docx: filename=python_docx-0.8.11-py3-none-any.whl size=184490 sha256=07d5d6f36867ab26f5556964c5be844786193250a5fbcb296b8f8ede37640ff0\n",
+      "\u001b[?25h  Created wheel for python_docx: filename=python_docx-0.8.11-py3-none-any.whl size=184490 sha256=061816c1880f685e9969ac1f17503b95097ee76072101c0fcba9acc6e84143a1\n",
       "  Stored in directory: /home/ec2-user/.cache/pip/wheels/65/e1/9b/0c38fe6cfe02a9fe31cb6b4efd90985f17354d7f77872f2def\n",
       "Successfully built python_docx\n",
       "Installing collected packages: lxml, python_docx\n",
@@ -48,93 +48,56 @@
     }
    ],
    "source": [
-    "!pip install python_docx"
+    "!pip install python_docx\n",
+    "!pip install --upgrade boto3\n",
+    "!pip install --upgrade sagemaker"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "947b11e9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------!"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "3680aba6-c25e-4bec-9d64-e670c7dac856",
+   "metadata": {},
    "source": [
-    "#Sagemaker Endpoint Deploy\n",
-    "from sagemaker.huggingface import HuggingFaceModel\n",
-    "import sagemaker\n",
-    "\n",
-    "role = sagemaker.get_execution_role()\n",
-    "# Hub Model configuration. https://huggingface.co/models\n",
-    "hub = {\n",
-    "\t'HF_MODEL_ID':'shibing624/text2vec-base-chinese',\n",
-    "\t'HF_TASK':'feature-extraction'\n",
-    "}\n",
-    "\n",
-    "# create Hugging Face Model Class\n",
-    "huggingface_model = HuggingFaceModel(\n",
-    "\ttransformers_version='4.17.0',\n",
-    "\tpytorch_version='1.10.2',\n",
-    "\tpy_version='py38',\n",
-    "\tenv=hub,\n",
-    "\trole=role, \n",
-    ")\n",
-    "\n",
-    "# deploy model to SageMaker Inference\n",
-    "predictor = huggingface_model.deploy(\n",
-    "\tendpoint_name='huggingface-inference-text2vec-base-chinese-v1',\n",
-    "\tinitial_instance_count=1, # number of instances\n",
-    "\t# instance_type='ml.m5.xlarge' # ec2 instance type\n",
-    "\tinstance_type='ml.p3.2xlarge'\n",
-    ")"
+    "## Hyperparameter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "633841bc-df6d-4b02-a45c-161fe65f377b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.187071323394775\n"
-     ]
-    }
-   ],
+   "execution_count": 45,
+   "id": "b473cddd-6315-45d2-91cc-c1954a09c5bf",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Inference testing\n",
-    "import time\n",
+    "# The name of index\n",
+    "index_name = ' '\n",
     "\n",
-    "hfp = sagemaker.huggingface.model.HuggingFacePredictor('huggingface-inference-text2vec-base-chinese-v1')\n",
+    "# The name of embbeding model endpoint, usually you can keep it as default\n",
+    "eb_endpoint = 'huggingface-inference-text2vec-base-chinese-v1'\n",
     "\n",
-    "t0 = time.time()\n",
-    "for i in range(10):\n",
-    "    hfp.predict({'inputs':''.join(['打印' for _ in range(100)])})[0][0][0]\n",
-    "print(time.time()-t0)"
+    "# Ebbeding vector dimension, usually you can keep it as default\n",
+    "v_dimension = 768\n",
+    "\n",
+    "# Docs file folder to be processed and ingested\n",
+    "folder_path = ' '"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "92c23b2a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " import 11 out of 12 finished file 0 out of 1 finished\n"
+     ]
+    }
+   ],
    "source": [
-    "#Preprocess Data\n",
     "import os\n",
     "import docx\n",
     "import pandas as pd\n",
@@ -145,6 +108,9 @@
     "import boto3\n",
     "import requests\n",
     "\n",
+    "hfp = sagemaker.huggingface.model.HuggingFacePredictor('huggingface-inference-text2vec-base-chinese-v1')\n",
+    "\n",
+    "#===================Function Definition=================\n",
     "def is_all_black(s):\n",
     "    for si in s:\n",
     "        if si != ' ':\n",
@@ -181,19 +147,7 @@
     "        title = os.path.split(os.path.splitext(path)[0])[1].replace('——', '-').split('-')[1]\n",
     "    except:\n",
     "        title = os.path.split(os.path.splitext(path)[0])[1]\n",
-    "    return title"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b16f410c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hfp = sagemaker.huggingface.model.HuggingFacePredictor('huggingface-inference-text2vec-base-chinese-v1')\n",
+    "    return title\n",
     "\n",
     "def get_vector(q):\n",
     "    if len(q) > 400:\n",
@@ -208,40 +162,55 @@
     "        df.iloc[i, 5] = title_vector\n",
     "        df.iloc[i, 6] = str(get_vector(df.iloc[i, 2]))\n",
     "        print('\\r embbeding %i out of %i finished'%(i, len(df)), end='')\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "32458c74",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#import data to OpenSearch\n",
-    "import boto3\n",
-    "import requests\n",
-    "import json\n",
+    "    return df\n",
     "\n",
-    "\n",
-    "host = '' # cluster endpoint, for example: my-test-domain.us-east-1.es.amazonaws.com/\n",
-    "region = '' # e.g. cn-north-1\n",
-    "index_name = \"\"\n",
-    "username = \"\"\n",
-    "password = \"\"\n",
-    "\n",
-    "service = 'es'\n",
-    "credentials = boto3.Session().get_credentials()\n",
-    "\n",
-    "\n",
+    "# ==============OpenSearch Related=====================\n",
+    "# retrieve secret manager value by key using boto3\n",
+    "sm_client = boto3.client('secretsmanager')\n",
+    "master_user = sm_client.get_secret_value(SecretId='opensearch-host-url')['SecretString']\n",
+    "data= json.loads(master_user)\n",
+    "es_host_name = data.get('host')\n",
+    "host = es_host_name+'/' if es_host_name[-1] != '/' else es_host_name# cluster endpoint, for example: my-test-domain.us-east-1.es.amazonaws.com/\n",
+    "region = boto3.Session().region_name # e.g. cn-north-1\n",
+    "# sm_client = boto3.client('secretsmanager')\n",
+    "master_user = sm_client.get_secret_value(SecretId='opensearch-master-user')['SecretString']\n",
+    "data= json.loads(master_user)\n",
+    "username = data.get('username')\n",
+    "password = data.get('password')\n",
+    "# service = 'es'\n",
+    "# credentials = boto3.Session().get_credentials()\n",
     "awsauth = (username, password)\n",
-    "\n",
-    "\n",
     "url = host+'_bulk'\n",
-    "\n",
     "headers = { \"Content-Type\": \"application/json\" }\n",
+    "\n",
+    "payloads = {\n",
+    "\"settings\": { \"index\": {\n",
+    "\"knn\": True,\n",
+    "\"knn.algo_param.ef_search\": 100 }\n",
+    "}, \"mappings\": {\n",
+    "\"properties\": { \n",
+    "  \"title_vector\": {\n",
+    "\"type\": \"knn_vector\", \"dimension\": v_dimension, \"method\": {\n",
+    "\"name\": \"hnsw\", \"space_type\": \"l2\", \"engine\": \"nmslib\", \"parameters\": {\n",
+    "\"ef_construction\": 256,\n",
+    "\"m\": 48 }\n",
+    "} },\n",
+    "\"sentence_vector\": {\n",
+    "\"type\": \"knn_vector\", \"dimension\": v_dimension, \"method\": {\n",
+    "\"name\": \"hnsw\", \"space_type\": \"l2\", \"engine\": \"nmslib\", \"parameters\": {\n",
+    "\"ef_construction\": 256,\n",
+    "\"m\": 48 }\n",
+    "} },\n",
+    "\"title\": { \"type\": \"text\"}, \n",
+    "\"sentence\": {\"type\": \"text\" }, \n",
+    "\"paragraph\": {\"type\": \"text\" }, \n",
+    "\"sentence_id\": {\"type\": \"text\" }, \n",
+    "\"paragraph_id\": {\"type\": \"text\" }\n",
+    "} }\n",
+    "}\n",
+    "\n",
+    "# Create Index\n",
+    "r = requests.put(host+index_name, auth=awsauth, headers=headers, json=payloads)\n",
     "\n",
     "def import_data(df, id_start=0, before_import=0):\n",
     "    payloads = ''\n",
@@ -258,42 +227,11 @@
     "        payloads += first + second\n",
     "    # print(payloads)\n",
     "    r = requests.post(url, auth=awsauth, headers=headers, data=payloads.encode()) # requests.get, post, and delete have similar syntax\n",
-    "#     print(r.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "10f412d3",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m folder_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mslice\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m----> 9\u001b[0m names \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfolder_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m before_import \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(names)):\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: ''"
-     ]
-    }
-   ],
-   "source": [
-    "#Preprocess Data and Import\n",
+    "#     print(r.text)\n",
     "\n",
-    "hfp = sagemaker.huggingface.model.HuggingFacePredictor('huggingface-inference-text2vec-base-chinese-v1-gpu')\n",
-    "\n",
-    "folder_path = ''\n",
+    "#==============Main Preprocess Data and Import===============\n",
     "\n",
     "slice = 10\n",
-    "\n",
     "names = os.listdir(folder_path)\n",
     "before_import = 0\n",
     "for j in range(len(names)):\n",
@@ -304,65 +242,16 @@
     "        import_data(df[slice*i:slice*(i+1)], slice*i, before_import)\n",
     "        print('\\r import %i out of %i finished'%(i, len(df)//slice+1), end='')\n",
     "    before_import += len(df)\n",
-    "    print(' file %i out of %i finished'%(j, len(names)//slice+1))\n",
-    "    "
+    "    print(' file %i out of %i finished'%(j, len(names)//slice+1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "adaa310e",
+   "execution_count": null,
+   "id": "52c9c513-4101-4992-a14b-dcf1ec9dbd5e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table created successfully!\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Create Dynamo DB\n",
-    "client = boto3.client('dynamodb', region_name='us-west-2')\n",
-    "\n",
-    "try:\n",
-    "    resp = client.create_table(\n",
-    "        TableName=\"FeedbackRecordsSEWCFAQ\",\n",
-    "        # Declare your Primary Key in the KeySchema argument\n",
-    "        KeySchema=[\n",
-    "            {\n",
-    "                \"AttributeName\": \"SearchInputs\",\n",
-    "                \"KeyType\": \"HASH\"\n",
-    "            },\n",
-    "            {\n",
-    "                \"AttributeName\": \"_id\",\n",
-    "                \"KeyType\": \"RANGE\"\n",
-    "            }\n",
-    "        ],\n",
-    "        # Any attributes used in KeySchema or Indexes must be declared in AttributeDefinitions\n",
-    "        AttributeDefinitions=[\n",
-    "            {\n",
-    "                \"AttributeName\": \"SearchInputs\",\n",
-    "                \"AttributeType\": \"S\"\n",
-    "            },\n",
-    "            {\n",
-    "                \"AttributeName\": \"_id\",\n",
-    "                \"AttributeType\": \"S\"\n",
-    "            }\n",
-    "        ],\n",
-    "        # ProvisionedThroughput controls the amount of data you can read or write to DynamoDB per second.\n",
-    "        # You can control read and write capacity independently.\n",
-    "        ProvisionedThroughput={\n",
-    "            \"ReadCapacityUnits\": 50,\n",
-    "            \"WriteCapacityUnits\": 50\n",
-    "        }\n",
-    "    )\n",
-    "    print(\"Table created successfully!\")\n",
-    "except Exception as e:\n",
-    "    print(\"Error creating table:\")\n",
-    "    print(e)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
