--- a/Embbeding Model/EmbbedingModel_shibing624_text2vec-base-chinese.ipynb
+++ b/Embbeding Model/EmbbedingModel_shibing624_text2vec-base-chinese.ipynb
@@ -44,7 +44,7 @@
     "predictor = huggingface_model.deploy(\n",
     "\tendpoint_name='huggingface-inference-text2vec-base-chinese-v1',\n",
     "\tinitial_instance_count=1, # number of instances\n",
-    "\tinstance_type='ml.m5.xlarge' # ec2 instance type\n",
+    "\tinstance_type='ml.g4dn.2xlarge' # ec2 instance type\n",
     "\t# instance_type='ml.p3.2xlarge'\n",
     ")"
    ]
