--- a/LLM_Model/chatglm/chatglm_sagemaker_byos.ipynb
+++ b/LLM_Model/chatglm/chatglm_sagemaker_byos.ipynb
@@ -179,7 +179,7 @@
     ")\n",
     "\n",
     "endpoint_name = 'pytorch-inference-chatglm-v1'\n",
-    "instance_type = 'ml.g4dn.2xlarge'\n",
+    "instance_type = 'ml.p3.2xlarge'\n",
     "instance_count = 1\n",
     "\n",
     "from sagemaker.serializers import JSONSerializer\n",
@@ -189,7 +189,8 @@
     "    instance_type = instance_type, \n",
     "    initial_instance_count = instance_count,\n",
     "    serializer = JSONSerializer(),\n",
-    "    deserializer = JSONDeserializer()"
+    "    deserializer = JSONDeserializer()\n",
+    ")"
    ]
   },
   {
