doc import bugfix

--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -236,6 +236,7 @@
     "before_import = 0\n",
     "for j in range(len(names)):\n",
     "    name = names[j]\n",
+    "    if name == '.ipynb_checkpoints':continue\n",
     "    df = read_doc(os.path.join(folder_path, name))\n",
     "    df = embbeding(df)\n",
     "    for i in range(len(df)//slice+1):\n",
