--- a/LLM_Model/chatglm/chatglm_sagemaker_byos.ipynb
+++ b/LLM_Model/chatglm/chatglm_sagemaker_byos.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "252de0de",
    "metadata": {},
@@ -149,6 +150,10 @@
     "print(role)\n",
     "print(bucket)\n",
     "\n",
+    "if \"cn-\" in region_name:\n",
+    "    with open('./code/requirements.txt', 'r') as original: data = original.read()\n",
+    "    with open('./code/requirements.txt', 'w') as modified: modified.write(\"-i https://pypi.tuna.tsinghua.edu.cn/simple\\n\" + data)\n",
+    "\n",
     "!touch dummy\n",
     "!tar czvf model.tar.gz dummy\n",
     "assets_dir = 's3://{0}/{1}/assets/'.format(bucket, 'chatglm')\n",
@@ -179,7 +184,9 @@
     ")\n",
     "\n",
     "endpoint_name = 'pytorch-inference-chatglm-v1'\n",
-    "instance_type = 'ml.p3.2xlarge'\n",
+    "#instance_type = 'ml.p3.2xlarge'\n",
+    "instance_type='ml.g4dn.2xlarge' \n",
+    "\n",
     "instance_count = 1\n",
     "\n",
     "from sagemaker.serializers import JSONSerializer\n",
@@ -194,6 +201,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f6f59e3f",
    "metadata": {},
@@ -322,6 +330,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa257dda",
    "metadata": {},
@@ -354,6 +363,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7922fd8",
    "metadata": {},
@@ -375,6 +385,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a81504f9",
    "metadata": {},
@@ -407,6 +418,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "326def35",
    "metadata": {},
@@ -448,6 +460,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1c2dcc6a",
    "metadata": {},
