clean model name

--- a/LLM_Model/llm-chinese/llm_chinese_sagemaker_byos.ipynb
+++ b/LLM_Model/llm-chinese/llm_chinese_sagemaker_byos.ipynb
@@ -1,21 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "252de0de",
-   "metadata": {},
-   "source": [
-    "### SageMaker  Endpoint 部署ChatGLM\n",
-    "  \n",
-    "[ChatGLM](https://github.com/THUDM/ChatGLM-6B): ChatGLM-6B 是一个开源的、支持中英双语的对话语言模型，基于 General Language Model (GLM) 架构，具有 62 亿参数。结合模型量化技术，用户可以在消费级的显卡上进行本地部署（INT4 量化级别下最低只需 6GB 显存）。 ChatGLM-6B 使用了和 ChatGPT 相似的技术，针对中文问答和对话进行了优化。经过约 1T 标识符的中英双语训练，辅以监督微调、反馈自助、人类反馈强化学习等技术的加持，62 亿参数的 ChatGLM-6B 已经能生成相当符合人类偏好的回答。\n",
-    "\n",
-    "#### 准备\n",
-    "1. 升级boto3, sagemaker python sdk  \n",
-    "2. 准备inference.py, requirements.txt"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b8f2c403",
@@ -156,13 +141,13 @@
     "\n",
     "!touch dummy\n",
     "!tar czvf model.tar.gz dummy\n",
-    "assets_dir = 's3://{0}/{1}/assets/'.format(bucket, 'chatglm')\n",
-    "model_data = 's3://{0}/{1}/assets/model.tar.gz'.format(bucket, 'chatglm')\n",
+    "assets_dir = 's3://{0}/{1}/assets/'.format(bucket, 'llm_chinese')\n",
+    "model_data = 's3://{0}/{1}/assets/model.tar.gz'.format(bucket, 'llm_chinese')\n",
     "!aws s3 cp model.tar.gz $assets_dir\n",
     "!rm -f dummy model.tar.gz\n",
     "\n",
     "model_name = None\n",
-    "entry_point = 'inference-chatglm.py'\n",
+    "entry_point = 'inference.py'\n",
     "framework_version = '1.13.1'\n",
     "py_version = 'py39'\n",
     "model_environment = {\n",
@@ -183,9 +168,9 @@
     "    env = model_environment\n",
     ")\n",
     "\n",
-    "endpoint_name = 'pytorch-inference-chatglm-v1'\n",
-    "#instance_type = 'ml.p3.2xlarge'\n",
-    "instance_type='ml.g4dn.2xlarge' \n",
+    "endpoint_name = 'pytorch-inference-llm-v1'\n",
+    "instance_type = 'ml.p3.2xlarge'\n",
+    "# instance_type='ml.g4dn.2xlarge' \n",
     "\n",
     "instance_count = 1\n",
     "\n",
@@ -206,7 +191,7 @@
    "id": "f6f59e3f",
    "metadata": {},
    "source": [
-    "### ChatGLM 测试\n"
+    "### 测试\n"
    ]
   },
   {
@@ -223,35 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "01eb2968",
+   "execution_count": null,
+   "id": "8e48e6e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "你好👋！我是人工智能助手 ChatGLM-6B，很高兴见到你，欢迎问我任何问题。\n",
-      "以下是一些有助于在晚上入睡的方法：\n",
-      "\n",
-      "1. 创建一个舒适的睡眠环境：保持房间安静、凉爽、黑暗，并使用舒适的床垫、枕头和床单。\n",
-      "\n",
-      "2. 制定一个规律的睡眠时间表：每天在相同的时间上床和起床，有助于身体建立规律的睡眠习惯。\n",
-      "\n",
-      "3. 避免刺激性物质：避免饮用含有咖啡因和酒精的饮料，并尽量减少摄入糖类和高脂肪的食物。\n",
-      "\n",
-      "4. 放松身心：尝试进行一些放松的活动，如冥想、深呼吸或瑜伽，减轻压力和紧张情绪，更容易入睡。\n",
-      "\n",
-      "5. 避免在床上使用电子设备：避免使用手机、平板电脑或电视等电子设备，这些设备会发出刺激性光线，干扰睡眠。\n",
-      "\n",
-      "6. 尝试进行一些轻松的伸展运动：在床上进行一些轻松的伸展运动，让身体放松，有助于入睡。\n",
-      "\n",
-      "如果仍然无法入睡，可以尝试咨询医生或专业医师，获取更专业的建议和帮助。\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "inputs= {\n",
     "    \"ask\": \"你好!\"\n",
     "\n",
@@ -324,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#我们来查看一下刚部署的这个ChatGLM模型对应的SageMaker inference endpoint\n",
+    "#我们来查看一下刚部署的这个模型对应的SageMaker inference endpoint\n",
     "sagemaker_endpoint_name = predictor.endpoint_name\n",
     "sagemaker_endpoint_name"
    ]
@@ -335,7 +296,7 @@
    "id": "fa257dda",
    "metadata": {},
    "source": [
-    "利用已经在SageMaker real time inference endpoint部署的ChatGLM模型来模拟单轮对话和多轮对话。\n",
+    "利用已经在SageMaker real time inference endpoint部署的LLM模型来模拟单轮对话和多轮对话。\n",
     "\n",
     "下面的代码建议在SageMaker Notebook上来运行。"
    ]
@@ -368,7 +329,7 @@
    "id": "a7922fd8",
    "metadata": {},
    "source": [
-    "先简单测试一下ChatGLM针对单个问题的回答"
+    "先简单测试一下针对单个问题的回答"
    ]
   },
   {
@@ -401,7 +362,7 @@
    "outputs": [],
    "source": [
     "#1.首先需要一个简单的开场拍。\n",
-    "print(\"用户：你好！\\nChatGLM：您好!我是ChatGLM。我可以回答您的问题、写文章、写作业、翻译，对于一些法律等领域的问题我也可以给你提供信息。\")\n",
+    "print(\"用户：你好！\\nAI：您好!我是AI。我可以回答您的问题、写文章、写作业、翻译，对于一些法律等领域的问题我也可以给你提供信息。\")\n",
     "\n",
     "#2.在同一个session中持续对话，但是每次对话之间没有什么关联。\n",
     "while True:\n",
@@ -413,7 +374,7 @@
     "    payload = {\"ask\": \"\\n用户：\"+ command + \"\\n\"}\n",
     "    #print(payload[\"ask\"])\n",
     "    query_response = query_endpoint_with_json_payload(json.dumps(payload).encode('utf-8'))\n",
-    "    generated_texts = \"ChatGLM：\" + parse_response_texts(query_response)\n",
+    "    generated_texts = \"AI：\" + parse_response_texts(query_response)\n",
     "    print(generated_texts)"
    ]
   },
@@ -423,7 +384,7 @@
    "id": "326def35",
    "metadata": {},
    "source": [
-    "多轮对话模拟：我们这里来测试一下ChatGLM的多轮对话能力。"
+    "多轮对话模拟：我们这里来测试一下多轮对话能力。"
    ]
   },
   {
@@ -433,15 +394,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1.首先需要开场拍来引导ChatGLM，其实就是给它一个上下文来启动所谓的对话session。\n",
-    "payload = {\"ask\": \"用户：你好！\\nChatGLM：您好!我是ChatGLM。我可以回答您的问题、写文章、写作业、翻译，对于一些法律等领域的问题我也可以给你提供信息。\"}\n",
+    "#1.首先需要开场拍来引导AI，其实就是给它一个上下文来启动所谓的对话session。\n",
+    "payload = {\"ask\": \"用户：你好！\\nAI：您好!我是AI。我可以回答您的问题、写文章、写作业、翻译，对于一些法律等领域的问题我也可以给你提供信息。\"}\n",
     "print(payload[\"ask\"])\n",
     "generated_texts = \"\"\n",
     "\n",
     "#在这里简单模拟多轮对话时，发送给SageMaker endpoint的payload会越来越大，这里对payload大致做一个限制。\n",
     "session_len = 10 * 1024 * 1024 \n",
     "\n",
-    "#2.在同一个session中持续对话，为了有多轮对话的效果，把每一轮的信息(问题-回答对)都带上来告诉ChatGLM之前的上下文。\n",
+    "#2.在同一个session中持续对话，为了有多轮对话的效果，把每一轮的信息(问题-回答对)都带上来告诉LLM之前的上下文。\n",
     "while True:\n",
     "    command = input(\"用户：\")\n",
     "    if command == 'quit':\n",
@@ -455,7 +416,7 @@
     "        break;\n",
     "    #print(payload[\"ask\"])\n",
     "    query_response = query_endpoint_with_json_payload(json.dumps(payload).encode('utf-8'))\n",
-    "    generated_texts = \"ChatGLM：\" + parse_response_texts(query_response)\n",
+    "    generated_texts = \"AI：\" + parse_response_texts(query_response)\n",
     "    print(generated_texts)"
    ]
   },
