--- a/Script-Doc_old.ipynb
+++ b/Script-Doc_old.ipynb
@@ -2,64 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b72e52e",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "1542f8a2",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload \n",
-    "%autoreload 2\n",
-    "\n",
-    "!pip install --upgrade boto3\n",
-    "!pip install --upgrade sagemaker\n",
-    "!pip install python_docx\n",
-    "!pip install langchain\n",
-    "!pip install pypdf\n",
-    "!pip install docx2txt"
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5ca88125",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "id": "fdc0c2e0",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://pip.repos.neuron.amazonaws.com\n",
+      "Collecting python_docx\n",
+      "  Downloading python-docx-0.8.11.tar.gz (5.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m51.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting lxml>=2.3.2\n",
+      "  Downloading lxml-4.9.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (7.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.1/7.1 MB\u001b[0m \u001b[31m43.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hBuilding wheels for collected packages: python_docx\n",
+      "  Building wheel for python_docx (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for python_docx: filename=python_docx-0.8.11-py3-none-any.whl size=184490 sha256=061816c1880f685e9969ac1f17503b95097ee76072101c0fcba9acc6e84143a1\n",
+      "  Stored in directory: /home/ec2-user/.cache/pip/wheels/65/e1/9b/0c38fe6cfe02a9fe31cb6b4efd90985f17354d7f77872f2def\n",
+      "Successfully built python_docx\n",
+      "Installing collected packages: lxml, python_docx\n",
+      "Successfully installed lxml-4.9.2 python_docx-0.8.11\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "import shutil\n",
-    "from langchain.chains import RetrievalQA\n",
-    "from langchain.chains.question_answering import load_qa_chain\n",
-    "from langchain.document_loaders import TextLoader\n",
-    "from langchain.document_loaders import UnstructuredMarkdownLoader\n",
-    "from langchain.document_loaders import PyPDFLoader\n",
-    "from langchain.document_loaders import Docx2txtLoader\n",
-    "from langchain.document_loaders import UnstructuredPowerPointLoader\n",
-    "from langchain.document_loaders.csv_loader import CSVLoader\n",
-    "from langchain.text_splitter import NLTKTextSplitter\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
-    "from chinese_text_splitter import ChineseTextSplitter\n",
-    "import json\n",
-    "from typing import Dict, List, Tuple\n",
-    "from tqdm import tqdm\n",
-    "from datetime import datetime\n",
-    "\n",
-    "import boto3\n",
-    "import nltk\n",
-    "import pandas as pd\n",
-    "import logging\n",
-    "\n",
-    "import sagemaker\n",
-    "from sagemaker.huggingface import HuggingFaceModel\n",
-    "import requests\n",
-    "\n",
-    "nltk.download('punkt')\n",
-    "logger = logging.getLogger()\n",
-    "logger.setLevel(logging.CRITICAL)"
+    "!pip install python_docx\n",
+    "!pip install --upgrade boto3\n",
+    "!pip install --upgrade sagemaker"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c462bf8",
+   "id": "3680aba6-c25e-4bec-9d64-e670c7dac856",
    "metadata": {},
    "source": [
     "## Hyperparameter"
@@ -67,35 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2c7e860b",
+   "execution_count": 45,
+   "id": "b473cddd-6315-45d2-91cc-c1954a09c5bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# The name of index\n",
-    "index_name = ''\n",
+    "index_name = ' '\n",
     "\n",
     "# The name of embbeding model endpoint, usually you can keep it as default\n",
-    "# eb_endpoint = 'huggingface-inference-eb'\n",
-    "eb_endpoint = 'huggingface-pytorch-inference-eb'\n",
+    "eb_endpoint = 'huggingface-inference-text2vec-base-chinese-v1'\n",
     "\n",
     "# Ebbeding vector dimension, usually you can keep it as default\n",
     "v_dimension = 768\n",
     "\n",
     "# Docs file folder to be processed and ingested\n",
-    "folder_path = ''\n",
-    "\n",
-    "# Paragraph size / Chunck size\n",
-    "chunck_size = 200\n",
-    "\n",
-    "# The imported data of the same index_name, usually you can keep it as 0 if you are creating a new index\n",
-    "before_import = 0"
+    "folder_path = ' '"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "06c82381",
+   "execution_count": 46,
+   "id": "92c23b2a",
    "metadata": {
     "tags": []
    },
@@ -104,39 +93,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99 99 99\n",
-      " import 9 out of 10 finished file 0 out of 1 finished\n"
+      " import 11 out of 12 finished file 0 out of 1 finished\n"
      ]
     }
    ],
    "source": [
-    "hfp = sagemaker.huggingface.model.HuggingFacePredictor(eb_endpoint)\n",
+    "import os\n",
+    "import docx\n",
+    "import pandas as pd\n",
+    "from docx import Document\n",
+    "import sagemaker\n",
+    "from sagemaker.huggingface import HuggingFaceModel\n",
+    "import json\n",
+    "import boto3\n",
+    "import requests\n",
+    "\n",
+    "hfp = sagemaker.huggingface.model.HuggingFacePredictor('huggingface-inference-text2vec-base-chinese-v1')\n",
     "\n",
     "#===================Function Definition=================\n",
+    "def is_all_black(s):\n",
+    "    for si in s:\n",
+    "        if si != ' ':\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
-    "def load_file(filepath,language):\n",
+    "def read_doc(path):\n",
+    "    title = get_title(path)\n",
+    "    titles = []\n",
+    "    paragraphs = []\n",
+    "    sentences = []\n",
+    "    paragraphs_id = []\n",
+    "    sentences_id = []\n",
     "    \n",
-    "    if filepath.lower().endswith(\".pdf\"):\n",
-    "        loader = PyPDFLoader(filepath)\n",
-    "    elif filepath.lower().endswith(\".docx\"):\n",
-    "        loader = Docx2txtLoader(filepath)\n",
-    "    elif filepath.lower().endswith(\".pptx\"):\n",
-    "        loader = UnstructuredPowerPointLoader(filepath)\n",
-    "    elif filepath.lower().endswith(\".csv\"):\n",
-    "        loader = CSVLoader(filepath)\n",
-    "    elif filepath.lower().endswith(\".txt\"):\n",
-    "        loader = TextLoader(filepath)\n",
-    "    else:\n",
-    "        loader = TextLoader(filepath)\n",
-    "\n",
-    "    if language == \"chinese\":\n",
-    "        textsplitter = ChineseTextSplitter()\n",
-    "    elif language == \"english\":\n",
-    "        textsplitter = NLTKTextSplitter(chunk_size=chunck_size, chunk_overlap=10)\n",
-    "\n",
-    "    docs = loader.load_and_split(textsplitter)\n",
-    "    return docs\n",
-    "\n",
+    "    document = Document(path)  # 读入文件\n",
+    "    for i in range(len(document.paragraphs)):\n",
+    "        p0 = document.paragraphs[i].text\n",
+    "        p = document.paragraphs[i].text.replace('. ', '。')\n",
+    "        if p != '':\n",
+    "            ss = p.split('。')\n",
+    "            for j in range(len(ss)):\n",
+    "                if ss[j] != '' and is_all_black(ss[j])==False:\n",
+    "                    titles.append(title)\n",
+    "                    paragraphs.append(p0)\n",
+    "                    sentences.append(ss[j])\n",
+    "                    paragraphs_id.append(i)\n",
+    "                    sentences_id.append(j)\n",
+    "    df = pd.DataFrame({'title':titles, 'paragraph':paragraphs, 'sentence':sentences,\n",
+    "                      'paragraph_id':paragraphs_id, 'sentence_id':sentences_id})          \n",
+    "    return df\n",
     "\n",
     "def get_title(path):\n",
     "    try:\n",
@@ -145,31 +149,8 @@
     "        title = os.path.split(os.path.splitext(path)[0])[1]\n",
     "    return title\n",
     "\n",
-    "def read_doc(path, chunck_size = chunck_size):\n",
-    "    doc = load_file(path, 'chinese')\n",
-    "    title = get_title(path)\n",
-    "    titles = []\n",
-    "    paragraphs = []\n",
-    "    sentences = []\n",
-    "    para = ''\n",
-    "    con = 0\n",
-    "    for d in doc:\n",
-    "#         print('*********')\n",
-    "        con += 1\n",
-    "        titles.append(title)\n",
-    "        sentences.append(d.page_content)\n",
-    "        para += d.page_content\n",
-    "        if len(para) >= chunck_size:\n",
-    "            paragraphs += [para for _ in range(con)]\n",
-    "            para = ''\n",
-    "            con = 0\n",
-    "    paragraphs += [para for _ in range(con)]\n",
-    "    print(len(titles), len(sentences),len(paragraphs))\n",
-    "    df = pd.DataFrame({'title':titles, 'paragraph':paragraphs, 'sentence':sentences})\n",
-    "    return df\n",
-    "\n",
     "def get_vector(q):\n",
-    "    if len(q) > 1000:\n",
+    "    if len(q) > 400:\n",
     "        return [-1000 for _ in range(768)]\n",
     "    return hfp.predict({'inputs':[q]})[0][0][0]\n",
     "\n",
@@ -178,8 +159,8 @@
     "    df['sentence_vector'] = ''\n",
     "    title_vector = str(get_vector(df.iloc[0, 0]))\n",
     "    for i in range(len(df)):\n",
-    "#         df.iloc[i, 5] = title_vector\n",
-    "        df.iloc[i, 3] = str(get_vector(df.iloc[i, 2]))\n",
+    "        df.iloc[i, 5] = title_vector\n",
+    "        df.iloc[i, 6] = str(get_vector(df.iloc[i, 2]))\n",
     "        print('\\r embbeding %i out of %i finished'%(i, len(df)), end='')\n",
     "    return df\n",
     "\n",
@@ -238,7 +219,10 @@
     "        second = json.dumps({\"title\": str(df.iloc[i-id_start, 0]), \n",
     "                     \"paragraph\": str(df.iloc[i-id_start, 1]), \n",
     "                     \"sentence\": str(df.iloc[i-id_start, 2]), \n",
-    "                     \"sentence_vector\": json.loads(df.iloc[i-id_start, 3])},\n",
+    "                     \"paragraph_id\": str(df.iloc[i-id_start, 3]), \n",
+    "                     \"sentence_id\": str(df.iloc[i-id_start, 4]), \n",
+    "                     \"title_vector\": json.loads(df.iloc[i-id_start, 5]),\n",
+    "                     \"sentence_vector\": json.loads(df.iloc[i-id_start, 6])},\n",
     "                   ensure_ascii=False) + \"\\n\"\n",
     "        payloads += first + second\n",
     "    # print(payloads)\n",
@@ -252,25 +236,20 @@
     "before_import = 0\n",
     "for j in range(len(names)):\n",
     "    name = names[j]\n",
-    "#     if os.path.splitext(name)[1] not in ['.doc','.docx']:continue\n",
-    "    try:\n",
-    "        df = read_doc(os.path.join(folder_path, name))\n",
-    "        df = embbeding(df)\n",
-    "        for i in range(len(df)//slice+1):\n",
-    "            import_data(df[slice*i:slice*(i+1)], slice*i, before_import)\n",
-    "            print('\\r import %i out of %i finished'%(i, len(df)//slice+1), end='')\n",
-    "        before_import += len(df)\n",
-    "        print(' file %i out of %i finished'%(j, len(names)//slice+1))\n",
-    "    except Exception as ex:\n",
-    "        traceback.print_exc(file=sys.stdout)\n",
-    "        failed_files.append(name)\n",
-    "        print(f\"=================Exception================={ex}\")"
+    "    if os.path.splitext(name)[1] not in ['.doc','.docx']:continue\n",
+    "    df = read_doc(os.path.join(folder_path, name))\n",
+    "    df = embbeding(df)\n",
+    "    for i in range(len(df)//slice+1):\n",
+    "        import_data(df[slice*i:slice*(i+1)], slice*i, before_import)\n",
+    "        print('\\r import %i out of %i finished'%(i, len(df)//slice+1), end='')\n",
+    "    before_import += len(df)\n",
+    "    print(' file %i out of %i finished'%(j, len(names)//slice+1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a8e622",
+   "id": "52c9c513-4101-4992-a14b-dcf1ec9dbd5e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -278,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839ee97e",
+   "id": "96bc59b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -300,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
