--- a/data_load/data_load.ipynb
+++ b/data_load/data_load.ipynb
@@ -28,7 +28,7 @@
      "output_type": "stream",
      "text": [
       "username: admin\n",
-      "password: \"PR|M/y9O1fj\n"
+      "password: \"PR|\n"
      ]
     }
    ],
@@ -49,8 +49,6 @@
     "data= json.loads(master_user)\n",
     "username = data.get('username')\n",
     "password = data.get('password')\n",
-    "print(\"username:\",username)\n",
-    "print(\"password:\",password)\n",
     "\n",
     "s3_res = boto3.resource('s3')\n",
     "s3_cli = boto3.client('s3')"
