--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -251,7 +251,8 @@
     "\n",
     "slice = 10\n",
     "names = os.listdir(folder_path)\n",
-    "before_import = 0\n",
+    "# before_import = 0\n",
+    "failed_files = []\n",
     "for j in range(len(names)):\n",
     "    name = names[j]\n",
     "#     if os.path.splitext(name)[1] not in ['.doc','.docx']:continue\n",
@@ -264,7 +265,7 @@
     "        before_import += len(df)\n",
     "        print(' file %i out of %i finished'%(j, len(names)//slice+1))\n",
     "    except Exception as ex:\n",
-    "        traceback.print_exc(file=sys.stdout)\n",
+    "        # traceback.print_exc(file=sys.stdout)\n",
     "        failed_files.append(name)\n",
     "        print(f\"=================Exception================={ex}\")"
    ]
