--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -171,7 +171,10 @@
     "    return df\n",
     "\n",
     "def get_vector(q):\n",
-    "    if len(q) > 1000:\n",
+    "    try:\n",
+    "        vector = hfp.predict({'inputs':[q]})[0][0][0]\n",
+    "        return vector\n",
+    "    except:\n",
     "        return [-1000 for _ in range(768)]\n",
     "    return hfp.predict({'inputs':[q]})[0][0][0]\n",
     "\n",
