set default index name and path

--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -58,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c462bf8",
    "metadata": {},
@@ -73,7 +74,12 @@
    "outputs": [],
    "source": [
     "# The name of index\n",
-    "index_name = ''\n",
+    "sm_client = boto3.client('secretsmanager')\n",
+    "index_name = sm_client.get_secret_value(SecretId='opensearch-index-name')['SecretString']\n",
+    "data= json.loads(index_name)\n",
+    "index_name = data.get('index')\n",
+    "print('pre-defined index name in deployment/cdk.json-->',index_name)\n",
+    "#index_name = ''\n",
     "\n",
     "# Language, 'chinese' or 'english'\n",
     "language = 'chinese'\n",
@@ -85,7 +91,8 @@
     "v_dimension = 768\n",
     "\n",
     "# Docs file folder to be processed and ingested\n",
-    "folder_path = ''\n",
+    "folder_path = 'docs/'\n",
+    "print('Please put data in this folder-->',folder_path)\n",
     "\n",
     "# Paragraph size / Chunck size\n",
     "chunck_size = 200\n",
