--- a/LLM_Model/llm-chinese/llm_chinese_sagemaker_byos.ipynb
+++ b/LLM_Model/llm-chinese/llm_chinese_sagemaker_byos.ipynb
@@ -169,8 +169,8 @@
     ")\n",
     "\n",
     "endpoint_name = 'pytorch-inference-llm-v1'\n",
-    "instance_type = 'ml.p3.2xlarge'\n",
-    "# instance_type='ml.g4dn.2xlarge' \n",
+    "# instance_type = 'ml.p3.2xlarge'\n",
+    "instance_type='ml.g4dn.2xlarge' \n",
     "\n",
     "instance_count = 1\n",
     "\n",
