--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -35,6 +35,7 @@
     "from langchain.document_loaders import Docx2txtLoader\n",
     "from langchain.document_loaders import UnstructuredPowerPointLoader\n",
     "from langchain.document_loaders.csv_loader import CSVLoader\n",
+    "from langchain.document_loaders import UnstructuredExcelLoader\n",
     "from langchain.text_splitter import NLTKTextSplitter\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from chinese_text_splitter import ChineseTextSplitter\n",
@@ -133,6 +134,9 @@
     "        loader = UnstructuredPowerPointLoader(filepath)\n",
     "    elif filepath.lower().endswith(\".csv\"):\n",
     "        loader = CSVLoader(filepath)\n",
+    "    elif filepath.lower().endswith(\".xlsx\"):\n",
+    "        loader = UnstructuredExcelLoader(filepath)\n",
+    "\n",
     "    elif filepath.lower().endswith(\".txt\"):\n",
     "        loader = TextLoader(filepath)\n",
     "    else:\n",
