update xslx format

--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0b72e52e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload \n",
@@ -15,14 +17,17 @@
     "!pip install python_docx\n",
     "!pip install langchain\n",
     "!pip install pypdf\n",
-    "!pip install docx2txt"
+    "!pip install docx2txt\n",
+    "!pip install unstructured"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5ca88125",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -59,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0c462bf8",
    "metadata": {},
@@ -71,7 +75,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2c7e860b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# The name of index\n",
@@ -104,21 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "06c82381",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99 99 99\n",
-      " import 9 out of 10 finished file 0 out of 1 finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hfp = sagemaker.huggingface.model.HuggingFacePredictor(eb_endpoint)\n",
     "\n",
@@ -136,7 +133,6 @@
     "        loader = CSVLoader(filepath)\n",
     "    elif filepath.lower().endswith(\".xlsx\"):\n",
     "        loader = UnstructuredExcelLoader(filepath)\n",
-    "\n",
     "    elif filepath.lower().endswith(\".txt\"):\n",
     "        loader = TextLoader(filepath)\n",
     "    else:\n",
@@ -270,6 +266,8 @@
     "for j in range(len(names)):\n",
     "    name = names[j]\n",
     "#     if os.path.splitext(name)[1] not in ['.doc','.docx']:continue\n",
+    "    print('filename-->',name)\n",
+    "    if os.path.isdir(name):continue\n",
     "    try:\n",
     "        df = read_doc(os.path.join(folder_path, name))\n",
     "        df = embbeding(df)\n",
@@ -317,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
