--- a/LLM_Model/llm-chinese2/deploy_model_acc.ipynb
+++ b/LLM_Model/llm-chinese2/deploy_model_acc.ipynb
@@ -112,7 +112,7 @@
     "inference_image_uri = f\"763104351884.dkr.ecr.{region}.amazonaws.com/djl-inference:0.22.1-deepspeed0.9.2-cu118\"\n",
     "\n",
     "# endpoint_name = sagemaker.utils.name_from_base(code_tarname.replace('_','-'))\n",
-    "endpoint_name = \"pytorch-inference-chatglm2-g5-2x\""
+    "endpoint_name = \"pytorch-inference-llm-cn-v2\""
    ]
   },
   {
@@ -136,8 +136,12 @@
     "              model_data=s3_code_artifact, \n",
     "              role=role)\n",
     "\n",
+    "instance_type = 'ml.g5.2xlarge'\n",
+    "if region.find('cn') >=0:\n",
+    "    instance_type = 'ml.g4dn.2xlarge'\n",
+    "\n",
     "model.deploy(initial_instance_count = 1,\n",
-    "             instance_type = 'ml.g5.2xlarge', \n",
+    "             instance_type = instance_type, \n",
     "             endpoint_name = endpoint_name,\n",
     "             container_startup_health_check_timeout = 900\n",
     "            )"
